welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: '=' expected but ';' found.
  a;b;c;d match {
^countTeen:4: error: illegal start of simple pattern
    case if (12<a<20) => NbAdo = NbAdo + 1
         ^countTeen:5: error: '=>' expected but '}' found.
  }
  ^